        - Issue 348: OCI_EventGetObject() might returned garbage character after object name
        - Issue 354: OCI_ElemSetRaw() performed wrong check on element datatype
        - Issue 361: Fixed HA event callback processing
        
    * Fixes (C++ API)
    
        - Issue 355: Since v4.7.5, connection acquired from ocilib::Pool where not released, leading to pool exhaustion
        
    * Documentation
    
        - Issue 352 : Fixed documentation for OCI_PoolGetNoWait and ocilib::Pool::SetNoWait()

2023-02-08 Version 4.7.6 Vincent Rogier vince.rogier@ocilib.net

   * Fixes (C API)

		- Issue 326: OCI_GetTimeout() always returns 0 since v4.7.0

    * Fixes (C++ API)
    
		- Issue 325: ocilib::Lob::GetConnection() does not compile anymore since v4.7.5
	

2023-02-06 Version 4.7.5 Vincent Rogier vince.rogier@ocilib.net

	* Changes (C API)
	
		- OCI_Cleanup() now returns FALSE if OCI_Initialize() has not been called
		- OCI_GetSQLVerb() handles some new verbs added with Oracle 21c
		- OCI_Execute() and related methods return now FALSE and report an OCI_Error for PL/SQL statements raising PL/SQL no_data_found exceptions
			* This revert behavior introduced in v4.3.1 for addressing issue #68
			* Motivation is to re-align on SQL*Plus behavior
		- OCI_GetOCIRuntimeVersion() and OCI_GetOCICompileVersion() returned integer values on 6 digits instead of 4 digits
			* Handles now  minor version using 2 digits (e.g. Oracle OCI version 19.16.0)
			* Use macros OCI_VER_MAJ, OCI_VER_MIN, OCI_VER_REV and OCI_VER_MAKE to do computations on versions
		- Very old Oracle OCI 8.0.x is now supported 
			- Up to now, OCILIB supported all Oracle versions from 8.1
			- Oracle 8.0 is now also supported for very old legacy systems (as Oracle 8.0 was released in mid 90's)
			- As OCI multi-threaded APIs were only available from 8.1, passing OCI_ENV_THREADED to OCI_Initialize() with Oracle 8.0 will generate an error:
				- OCILIB Error code : OCI_ERR_NOT_AVAILABLE 